Bug 667646 - fun.caller should be null, not undefined, when fun is being called by global code.  r=evilpie